--- a/Classifiers/Day9/Day_9_Rotation_Test.ipynb
+++ b/Classifiers/Day9/Day_9_Rotation_Test.ipynb
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "scrolled": false
    },
@@ -1325,7 +1325,18 @@
       "Predicting batch 6 out of 10\n",
       "Prediction took 0.00293035368919s per sample\n",
       "\n",
-      "Predicting batch 7 out of 10\n"
+      "Predicting batch 7 out of 10\n",
+      "Prediction took 0.00212469470718s per sample\n",
+      "\n",
+      "Predicting batch 8 out of 10\n",
+      "Prediction took 0.00218649663492s per sample\n",
+      "\n",
+      "Predicting batch 9 out of 10\n",
+      "Prediction took 0.00264680543379s per sample\n",
+      "\n",
+      "Predicting batch 10 out of 10\n",
+      "Prediction took 0.00237808450786s per sample\n",
+      "\n"
      ]
     }
    ],
@@ -1335,20 +1346,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../Data/Day_9_96_test.csv\n"
+     ]
+    }
+   ],
    "source": [
-    "saveTest(0.956111737149703, 'Day_8_new')"
+    "saveTest(0.96, 'Day_9_96')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully submitted to Higgs Boson Machine Learning Challenge"
+     ]
+    }
+   ],
    "source": [
-    "!kaggle competitions submit -c higgs-boson -f ../Data/Day_8_new_test.csv -m\"Day_8 IM TTA\""
+    "!kaggle competitions submit -c higgs-boson -f ../Data/Day_9_96_test.csv -m\"Day_9 1e-3 96\""
    ]
   },
   {
