Py3 adaptions and speed tests

--- a/Data_Processing/1_Data_Import.ipynb
+++ b/Data_Processing/1_Data_Import.ipynb
@@ -11,21 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/giles/anaconda2/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "/home/giles/anaconda2/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import division\n",
     "%matplotlib inline\n",
@@ -34,7 +22,6 @@
     "os.environ['MKL_THREADING_LAYER']='GNU'\n",
     "sys.path.append('../')\n",
     "from Modules.Basics import *\n",
-    "from Modules.Regressor import Regressor\n",
     "from ML_Tools.General.Feature_Selection import *\n",
     "from ML_Tools.Transformations.HEP_Proc import *"
    ]
@@ -48,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +280,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +303,7 @@
     }
    ],
    "source": [
-    "print [x for x in trainingData.columns], len(trainingData.columns)"
+    "print ([x for x in trainingData.columns], len(trainingData.columns))"
    ]
   },
   {
@@ -328,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,27 +410,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index([u'EventId', u'DER_mass_MMC', u'DER_mass_transverse_met_lep',\n",
-       "       u'DER_mass_vis', u'DER_pt_h', u'DER_deltaeta_jet_jet',\n",
-       "       u'DER_mass_jet_jet', u'DER_prodeta_jet_jet', u'DER_deltar_tau_lep',\n",
-       "       u'DER_pt_tot', u'DER_sum_pt', u'DER_pt_ratio_lep_tau',\n",
-       "       u'DER_met_phi_centrality', u'DER_lep_eta_centrality', u'PRI_met_pt',\n",
-       "       u'PRI_met_sumet', u'PRI_jet_num', u'PRI_jet_all_pt', u'gen_weight',\n",
-       "       u'gen_target', u'PRI_tau_px', u'PRI_tau_py', u'PRI_tau_pz',\n",
-       "       u'PRI_lep_px', u'PRI_lep_py', u'PRI_lep_pz', u'PRI_jet_leading_px',\n",
-       "       u'PRI_jet_leading_py', u'PRI_jet_leading_pz', u'PRI_jet_subleading_px',\n",
-       "       u'PRI_jet_subleading_py', u'PRI_jet_subleading_pz', u'PRI_met_px',\n",
-       "       u'PRI_met_py'],\n",
+       "Index(['EventId', 'DER_mass_MMC', 'DER_mass_transverse_met_lep',\n",
+       "       'DER_mass_vis', 'DER_pt_h', 'DER_deltaeta_jet_jet', 'DER_mass_jet_jet',\n",
+       "       'DER_prodeta_jet_jet', 'DER_deltar_tau_lep', 'DER_pt_tot', 'DER_sum_pt',\n",
+       "       'DER_pt_ratio_lep_tau', 'DER_met_phi_centrality',\n",
+       "       'DER_lep_eta_centrality', 'PRI_met_pt', 'PRI_met_sumet', 'PRI_jet_num',\n",
+       "       'PRI_jet_all_pt', 'gen_weight', 'gen_target', 'PRI_tau_px',\n",
+       "       'PRI_tau_py', 'PRI_tau_pz', 'PRI_lep_px', 'PRI_lep_py', 'PRI_lep_pz',\n",
+       "       'PRI_jet_leading_px', 'PRI_jet_leading_py', 'PRI_jet_leading_pz',\n",
+       "       'PRI_jet_subleading_px', 'PRI_jet_subleading_py',\n",
+       "       'PRI_jet_subleading_pz', 'PRI_met_px', 'PRI_met_py'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +659,7 @@
        "[5 rows x 34 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +692,7 @@
     "trainIndeces, valIndeces = splitDevVal(trainingData)\n",
     "train = trainingData.loc[trainIndeces]\n",
     "val = trainingData.loc[valIndeces]\n",
-    "print len(train), len(val)"
+    "print (len(train), len(val))"
    ]
   },
   {
@@ -719,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +718,7 @@
    ],
    "source": [
     "trainFeatures = [x for x in train.columns if 'gen' not in x and x != 'EventId']\n",
-    "print len(trainFeatures)"
+    "print (len(trainFeatures))"
    ]
   },
   {
@@ -761,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -824,12 +810,12 @@
     }
    ],
    "source": [
-    "print classTrainFeatures"
+    "print (classTrainFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +825,7 @@
        "     steps=[('normIn', StandardScaler(copy=True, with_mean=True, with_std=True))])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -851,27 +837,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(dirLoc + 'inputPipe.pkl', 'w') as fout:\n",
+    "with open(dirLoc + 'inputPipe.pkl', 'wb') as fout:\n",
     "    pickle.dump(inputPipe, fout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(dirLoc + 'inputPipe.pkl', 'r') as fin:\n",
+    "with open(dirLoc + 'inputPipe.pkl', 'rb') as fin:\n",
     "        inputPipe = pickle.load(fin)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,12 +892,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def prepareSample(inData, mode, inputPipe, normWeights, N=10):\n",
-    "    print \"Running\", mode\n",
+    "    print (\"Running\", mode)\n",
     "    os.system('rm ' + dirLoc + mode + '.hdf5')\n",
     "    outFile = h5py.File(dirLoc + mode + '.hdf5', \"w\")\n",
     "            \n",
@@ -919,13 +905,13 @@
     "    folds = kf.split(inData, inData['gen_target'])\n",
     "\n",
     "    for i, (train, test) in enumerate(folds):\n",
-    "        print \"Saving fold:\", i, \"of\", len(test), \"events\"\n",
+    "        print (\"Saving fold:\", i, \"of\", len(test), \"events\")\n",
     "        saveBatch(inData.iloc[test], i, inputPipe, outFile, normWeights, mode)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -942,7 +928,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/giles/anaconda2/lib/python2.7/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
+      "/home/giles/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:537: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1004,21 +990,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
